--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -30,22 +30,15 @@ i.documentation.down {
 }
 
 div.spio-modal-shade {
-  position: fixed;
-  /* Stay in place */
-  z-index: 10;
-  /* Sit on top - zindex wars  */
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top - zindex wars  */
   left: 0;
   top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 div.spio-modal {
@@ -56,13 +49,10 @@ div.spio-modal {
   background-position: center;
   padding: 20px 16px 6px 16px;
   border: 1px solid #888;
-  width: 40%;
-  /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
   max-width: 100%;
-  min-width: 300px;
-  /* Could be more or less, depending on screen size */
-  z-index: 100;
-  /* Proper z-index */
+  min-width: 300px; /* Could be more or less, depending on screen size */
+  z-index: 100; /* Proper z-index */
   position: fixed;
   top: 10%;
   left: 30%;
