--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -63,7 +63,10 @@
     border-radius: 6px;
     border: none;
     transition: all 0.1s ease-in-out;
-    min-height: 44px;
+  //  min-height: 44px;
+    line-height: 1;
+
+    
 
     &:hover {
       background: $color-dark;
@@ -72,7 +75,6 @@
     }
 
     &:focus {
-
       background: $color-dark;
     }
 
@@ -81,6 +83,15 @@
       height: 26px;
       margin-right: 8px;
     }
+    .icon 
+    {
+       margin-right: 4px;
+       &.white 
+       {
+         filter: $filter_white;
+       }
+       
+    }
 
     p {
       margin: 0;
@@ -88,7 +99,7 @@
       font-size: 14px;
       vertical-align: bottom;
     }
-  }
+  } // button basic
 
   .button-primary {
     background: $blue_default;
@@ -122,24 +133,12 @@
   }
 
   .date-picker-container {
-     // border: 1px solid #ccc; 
-      ///padding: 8px;
+
       position: relative;
       display: inline-block;
 
       // Date Picker tweaks / fixes 
-     /* .the-date-picker
-      {
-         width: 40%; 
-         max-width: 300px;
-         position: absolute; 
-         z-index: 20;
-         select {
-           background: none;
-           padding: 6px;
-         }
-      }
-*/
+
   
       .the-datepicker__container {
           margin-top: 4px;
@@ -154,7 +153,37 @@
          cursor: pointer;
       }
 
+  }
 
+  .wrap-collap {
+
+      .collap-content 
+      {
+         display: none; 
+         opacity: 0;
+      //   height: 0;
+      }
+      .collap-checkbox {
+        display: none; 
+        
+
+        &:checked + label + .collap-content 
+        {
+           display: block;
+           transition: opacity 1s linear; 
+           opacity: 1;
+          // height: auto; 
+           //visibility: visible;
+
+        }
+        &:checked + label .collap-arrow img
+        {
+            transition: all 0.2s linear; 
+            rotate: 180deg;
+        }
+      }
+
+    
   }
 
   .dashicons.spin {
@@ -176,80 +205,6 @@
     width: 50%;
     height: 50%;
   }
-
-
-  .bulk-modal {
-    position: absolute;
-    padding: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    width: auto;
-    box-sizing: border-box;
-    box-shadow: rgba(0, 0, 0, 0.5) 4px 4px 20px;
-
-    .close {
-      position: absolute;
-      right: 10px;
-      top: 10px;
-      color: white;
-      font-size: 26px;
-      cursor: pointer;
-    }
-
-    .title {
-      margin: 0;
-      padding: 12px;
-      background: #1FB5BF;
-      background: linear-gradient(90deg, $color-darkest 0%, rgba(15, 106, 125, 1) 0%, $color-dark 100%);
-      width: 100%;
-      font-size: 16px;
-      color: #ffffff;
-      box-sizing: border-box;
-      height: 40px;
-    }
-
-    .content {
-      padding: 12px;
-      box-sizing: border-box;
-      height: 90%;
-
-      .table-wrapper {
-        display: table;
-
-        .heading {
-          font-weight: 700;
-
-          >span {
-            border-bottom: 1px solid #ccc;
-            border-left: 1px solid #ddd;
-          }
-        }
-
-        >div {
-          display: table-row;
-        }
-
-        >div>span {
-          display: table-cell;
-          padding: 4px 8px;
-
-          &:first-child {
-            white-space: nowrap;
-          }
-        }
-      }
-
-      a {
-        text-decoration: none;
-        margin-left: 8px;
-      }
-    }
-
-    // content
-  }
-
 
   .screen-wrapper {
     width: 100%;
@@ -434,8 +389,6 @@
 
 
   }
-
-
 
   section.spio-progressbar {
     margin: 30px 0;
@@ -624,6 +577,10 @@
       //margin-left: 15px;
       .switch_button {
         display: inline-block;
+        &.indent
+        {
+           margin-left: 65px;
+        }
       }
 
       h4 {
