--- a/res/scss/bulk/_dashboard.scss
+++ b/res/scss/bulk/_dashboard.scss
@@ -21,10 +21,12 @@
             
             button.start
             {
-               color: #ffffff;
-               background-color: $blue_default;
+               color: $blue_dark;
+               background-color: $blue_background;
+               margin: 35px 0 70px;
                //background: linear-gradient(to left, $color-darkest, $color-dark);
                border-radius: 3px;
+
                padding: 12px 20px; 
                font-size: 16px;
              //  width: 250px;
@@ -32,12 +34,17 @@
 							 font-weight: 700;
 						//	 font-size: 16px;
 							// letter-spacing: 0.3px;
-							 border: none;
+							 border: 1px solid $blue_default;
               transition: all 0.1s ease-in-out;
 
+              img {
+                width: 30px;
+              }
+
               &:hover {
-                background: lighten($blue_default, 10%);
+                background: lighten($blue_dark, 10%);
                 //transform: scale(1.02);
+                color: #fff;
               }
 
                &:disabled {
@@ -114,7 +121,8 @@
               background: $blue_default; 
               font-size: 12px;
               .icon {
-                 margin-left: 4px; 
+                 margin: 0 4px; 
+                 filter: $filter-white; 
               }
            }
  
@@ -136,6 +144,7 @@
           {
             background: $blue_light;
             border-top: 1px solid $blue_dark;
+            text-align: left;
             span {
               font-weight: 700;
               padding-left: 10px;
@@ -149,6 +158,7 @@
           .data
           {
             span {
+              text-align: left;
               border-bottom: 1px solid #EBF5FF;
               border-top: 1px solid #EBF5FF;
               &:first-child { border-left: 1px solid #EBF5FF; color: $blue_default; }
