--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -757,6 +757,15 @@
   flex-direction: column;
   flex-grow: 1;
 }
+.wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.active .step {
+  background-color: #1ABDCA;
+  color: #fff;
+  border-color: #F4FBFC;
+}
+.wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.active .text {
+  color: #1ABDCA;
+  font-weight: 700;
+}
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.result .line {
   background: linear-gradient(90deg, rgb(204, 204, 204) 0%, rgb(204, 204, 204) 49.9%, rgb(255, 255, 255) 51%, rgb(255, 255, 255) 100%);
 }
@@ -779,7 +788,7 @@
   border: 2px solid #ccc;
   border-radius: 50%;
   height: 45px;
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 700;
   color: #ccc;
   width: 45px;
@@ -799,15 +808,19 @@
   color: #ccc;
   margin-top: 8px;
 }
+.wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select {
+  /*   .text,
+     .step {
+       color: #fff;
+       background-color: $blue_default;
+     }
+
+     .step {
+       border-color: #1FBEC9;
+     }*/
+}
 .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .line {
   background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
-}
-.wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .text,
-.wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .step {
-  color: #EC2C25;
-}
-.wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .step {
-  border-color: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .load.wrapper,
 .wrap.is-shortpixel-bulk-page section.panel.selection .interface.wrapper {
@@ -965,45 +978,35 @@
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .select .line {
   background: #1FBEC9;
 }
-.wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .select .text,
-.wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .select .step {
-  color: #ccc;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .select .step {
-  border-color: #1FBEC9;
-}
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .line {
   background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
-.wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .text,
-.wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .step {
-  color: #EC2C25;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .step {
-  border-color: #1FBEC9;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list {
-  background-color: #F6F9FF;
-  width: 80%;
-  margin: 0 auto;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list h3 {
-  font-size: 18px;
-  font-weight: 400;
+.wrap.is-shortpixel-bulk-page section.panel.summary h3 {
+  font-size: 24px;
+  font-weight: 700;
   padding: 26px 0;
   color: #555D66;
-  padding-left: 35px;
-  border-bottom: 1px solid #DFEAFF;
+  text-align: center;
 }
-.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list h3 span {
+.wrap.is-shortpixel-bulk-page section.panel.summary h3 span {
   float: right;
   margin-right: 35px;
   margin-top: -15px;
 }
+.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list {
+  display: flex;
+  flex-direction: row;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper {
+  background-color: #F4FBFC;
+  flex: 1;
+  border-radius: 16px;
+  margin: 0 5%;
+}
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper h4 {
   font-size: 14px;
   font-weight: 700;
-  padding-left: 80px;
+  padding-left: 20px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper h4 .dashicons {
   color: #1FBEC9;
@@ -1012,67 +1015,49 @@
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table {
   display: table;
   width: 90%;
-  margin: 0 auto;
+  margin: 0 4px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div {
   display: table-row;
-  background-color: #F0F5FF;
-  font-size: 16px;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div.images {
+  color: #116C7E;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div.filetypes {
-  background: #F5F9FF;
   color: #aaa;
   font-size: 12px;
 }
-.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div.filetypes > span {
-  border: 0;
-}
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div > span {
   display: table-cell;
-  border: 1px solid #DFEAFF;
+  border-bottom: 1px solid #ccc;
   width: 50%;
   padding: 15px 0 15px 15px;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div > span:nth-child(2) {
+  text-align: right;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .totals {
   text-align: center;
   font-size: 25px;
   padding: 35px 0;
-  background: #F6F9FF;
+  margin-top: 20px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .totals .number {
   margin-left: 35px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits {
   display: table;
-  width: 80%;
-  margin: 35px auto;
+  margin: 35px 100px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits > p {
   display: table-row;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits > p > span {
   display: table-cell;
-  padding: 10px 0;
+  padding: 12px;
   font-size: 14px;
   vertical-align: middle;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .credits > p > span:first-child {
-  font-weight: 700;
-  width: 40%;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .credits > p > span:nth-child(2n) {
-  width: 30%;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .credits > p > span:nth-child(3n) {
-  text-align: right;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .credits > p > span .button {
-  float: right;
-  margin-right: 0;
-}
-.wrap.is-shortpixel-bulk-page section.panel.summary .credits .heading span {
-  font-size: 18px;
-  font-weight: 700;
+  color: #116C7E;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .over-quota,
 .wrap.is-shortpixel-bulk-page section.panel.summary .no-images {
@@ -1117,35 +1102,9 @@
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .line {
   background: #1FBEC9;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .select .text,
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .select .step,
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .summary .text,
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .summary .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .step {
-  color: #ccc;
-}
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .select .step,
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .summary .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .step {
-  border-color: #1FBEC9;
-}
 .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .line,
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .line {
   background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
-}
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .text,
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .step {
-  color: #EC2C25;
-}
-.wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .step {
-  border-color: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .average-optimization,
 .wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization {
@@ -1420,28 +1379,8 @@
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .line {
   background: #1FBEC9;
 }
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .step {
-  color: #ccc;
-}
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .step,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .step {
-  border-color: #1FBEC9;
-}
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .line {
   background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
-}
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .step {
-  color: #EC2C25;
-}
-.wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .step {
-  border-color: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav {
   text-align: center;
