--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -418,6 +418,19 @@
         position: relative;
         flex-direction: column;
         flex-grow: 1;
+        &.active 
+        {
+          .step {
+            background-color: #1ABDCA; 
+            color: #fff;  
+            border-color: $blue_background;
+          }
+          .text { 
+            color: #1ABDCA; 
+            font-weight: 700;
+          }
+
+        }
 
       }
 
@@ -448,7 +461,7 @@
         border: 2px solid #ccc;
         border-radius: 50%;
         height: 45px;
-        font-size: 28px;
+        font-size: 20px;
         font-weight: 700;
         color: #ccc;
         width: 45px;
@@ -460,6 +473,7 @@
         background: #fff;
         transition: color 1s ease-in;
         padding-top: 2px;
+
       }
 
       .text {
@@ -490,15 +504,16 @@
         @include line-active();
       }
 
-      .text,
+   /*   .text,
       .step {
-        color: #EC2C25;
+        color: #fff;
+        background-color: $blue_default;
       }
 
       .step {
         border-color: #1FBEC9;
-      }
-    }
+      }*/
+    } 
 
     .load.wrapper,
     .interface.wrapper {
@@ -680,14 +695,6 @@
         background: #1FBEC9;
       }
 
-      .text,
-      .step {
-        color: #ccc
-      }
-
-      .step {
-        border-color: #1FBEC9;
-      }
     }
 
     .spio-progressbar .summary {
@@ -695,41 +702,44 @@
         @include line-active();
       }
 
-      .text,
-      .step {
-        color: #EC2C25;
-      }
+    }
 
-      .step {
-        border-color: #1FBEC9;
+
+    h3 {
+      font-size: 24px;
+      font-weight: 700;
+      padding: 26px 0;
+      color: #555D66;
+    //  padding-left: 35px;
+//border-bottom: 1px solid #DFEAFF;
+      text-align: center;
+
+      span {
+        float: right;
+        margin-right: 35px;
+        margin-top: -15px;
       }
     }
 
     .summary-list {
-      background-color: #F6F9FF;
-      width: 80%;
-      margin: 0 auto;
-
-      h3 {
-        font-size: 18px;
-        font-weight: 400;
-        padding: 26px 0;
-        color: #555D66;
-        padding-left: 35px;
-        border-bottom: 1px solid #DFEAFF;
-
-        span {
-          float: right;
-          margin-right: 35px;
-          margin-top: -15px;
-        }
-      }
+     // background-color: #F6F9FF;
+      //width: 80%;
+      //margin: 0 auto;
+      display: flex; 
+      flex-direction: row;
+      //gap: 5%;
+      
 
       .section-wrapper {
+        background-color: $blue_background;
+        flex: 1; 
+        border-radius: 16px;
+        margin: 0 5%; 
+
         h4 {
           font-size: 14px;
           font-weight: 700;
-          padding-left: 80px;
+          padding-left: 20px;
 
           .dashicons {
             color: #1FBEC9;
@@ -742,30 +752,38 @@
           display: table;
           //border: 1px solid #DFEAFF;
           width: 90%;
-          margin: 0 auto;
+          margin: 0 4px;
 
-          >div {
+          > div {
             display: table-row;
-            background-color: #F0F5FF;
-            font-size: 16px;
+         //   background-color: #F0F5FF;
+           // font-size: 16px;
+            &.images 
+            {
+              color: $blue_dark;
+            }
 
             &.filetypes {
-              background: #F5F9FF;
+          //    background: #F5F9FF;
               color: #aaa;
               font-size: 12px;
 
               >span {
-                border: 0;
+               // border: 0;
               }
             }
           }
 
           >div>span {
             display: table-cell;
-            border: 1px solid #DFEAFF;
+            border-bottom: 1px solid #ccc;
             width: 50%;
             // text-align: center;
             padding: 15px 0 15px 15px;
+            &:nth-child(2)
+            {
+               text-align: right;
+            }
 
 
           }
@@ -777,7 +795,8 @@
       text-align: center;
       font-size: 25px;
       padding: 35px 0;
-      background: #F6F9FF;
+      margin-top: 20px;
+     // background: #F6F9FF;
 
       .number {
         margin-left: 35px;
@@ -787,9 +806,9 @@
     .credits {
       display: table;
       //margin: 35px 0 35px 25px;
-      width: 80%;
+     // width: 80%;
       //margin-left: 10%;
-      margin: 35px auto;
+      margin: 35px 100px;
 
       >p {
         display: table-row
@@ -797,32 +816,34 @@
 
       >p>span {
         display: table-cell;
-        padding: 10px 0;
+        padding: 12px;
         font-size: 14px;
         vertical-align: middle;
+        color: $blue_dark;
+        
 
         &:first-child {
-          font-weight: 700;
-          width: 40%;
+         // font-weight: 700;
+        //  width: 40%;
         }
 
         &:nth-child(2n) {
-          width: 30%;
+        //  width: 30%;
         }
 
         &:nth-child(3n) {
-          text-align: right;
+        //  text-align: right;
         }
 
         .button {
-          float: right;
-          margin-right: 0;
+         // float: right;
+        //margin-right: 0;
         }
       }
 
       .heading span {
-        font-size: 18px;
-        font-weight: 700;
+       // font-size: 18px;
+        //font-weight: 700;
       }
 
     }
@@ -880,14 +901,6 @@ section.panel.finished {
       background: #1FBEC9;
     }
 
-    .text,
-    .step {
-      color: #ccc
-    }
-
-    .step {
-      border-color: #1FBEC9;
-    }
   }
 
   .spio-progressbar .process {
@@ -895,14 +908,6 @@ section.panel.finished {
       @include line-active();
     }
 
-    .text,
-    .step {
-      color: #EC2C25;
-    }
-
-    .step {
-      border-color: #1FBEC9;
-    }
   }
 
   .average-optimization {
@@ -1232,15 +1237,6 @@ section.panel.finished {
     .line {
       background: #1FBEC9;
     }
-
-    .text,
-    .step {
-      color: #ccc
-    }
-
-    .step {
-      border-color: #1FBEC9;
-    }
   }
 
   .spio-progressbar .result {
@@ -1248,14 +1244,7 @@ section.panel.finished {
       @include line-active();
     }
 
-    .text,
-    .step {
-      color: #EC2C25;
-    }
 
-    .step {
-      border-color: #1FBEC9;
-    }
   }
 
   nav {
