--- a/res/scss/elements/_colors.scss
+++ b/res/scss/elements/_colors.scss
@@ -9,6 +9,7 @@ $color-grey: #D7D7D7;
 $blue_default: #1ABDCA;
 $blue_dark : #116C7E;
 $blue_light :  #92D5E3;
+$blue_extralight : #D9F9FF;
 $blue_background: #F4FBFC;
 
 $black_default: #001E24;
