--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -742,6 +742,7 @@
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar {
   margin: 30px 0;
+  background-color: #F4FBFC;
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex {
   display: flex;
@@ -770,7 +771,6 @@
   background: linear-gradient(90deg, rgb(204, 204, 204) 0%, rgb(204, 204, 204) 49.9%, rgb(255, 255, 255) 51%, rgb(255, 255, 255) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.select .line {
-  width: 50%;
   left: 50%;
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex .line {
@@ -1037,17 +1037,20 @@
   text-align: right;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .totals {
-  text-align: center;
-  font-size: 25px;
-  padding: 35px 0;
+  font-size: 14px;
+  color: #116C7E;
   margin-top: 20px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .totals .number {
   margin-left: 35px;
 }
+.wrap.is-shortpixel-bulk-page section.panel.summary .credits-wrapper {
+  display: flex;
+  align-items: center;
+}
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits {
   display: table;
-  margin: 35px 100px;
+  margin: 35px 60px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .credits > p {
   display: table-row;
@@ -1058,6 +1061,24 @@
   font-size: 14px;
   vertical-align: middle;
   color: #116C7E;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .credits .totals span {
+  color: #000;
+  font-size: 16px;
+  font-weight: 500;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .credits.ai {
+  border-left: 1px solid #1ABDCA;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .button.unlimited {
+  color: #116C7E;
+  background: #F4FBFC;
+  border: 1px solid #1ABDCA;
+  border-radius: 0;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .button.unlimited .icon {
+  width: 30px;
+  margin-right: 8px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .over-quota,
 .wrap.is-shortpixel-bulk-page section.panel.summary .no-images {
@@ -1106,8 +1127,17 @@
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .line {
   background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization,
-.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization {
+.wrap.is-shortpixel-bulk-page section.panel.process .process_heading,
+.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading {
+  width: 80%;
+  margin: 15px auto;
+}
+.wrap.is-shortpixel-bulk-page section.panel.process .process_heading h3,
+.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading h3 {
+  border: 0;
+}
+.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization,
+.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization {
   position: absolute;
   top: 0px;
   right: 0;
@@ -1116,8 +1146,8 @@
   z-index: 2;
   background: rgba(255, 255, 255, 0.4);
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization p,
-.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization p {
+.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization p,
+.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization p {
   margin: 0;
   font-size: 13px;
   position: absolute;
@@ -1130,24 +1160,24 @@
   border-radius: 3px;
   white-space: nowrap;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization .opt-circle-average,
-.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average {
-  width: 150px;
-  height: 150px;
+.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization .opt-circle-average,
+.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization .opt-circle-average {
+  width: 100px;
+  height: 100px;
   float: right;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization .opt-circle-average .trail,
-.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .trail {
+.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization .opt-circle-average .trail,
+.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization .opt-circle-average .trail {
   stroke: #ddd;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization .opt-circle-average .path,
-.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .path {
+.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization .opt-circle-average .path,
+.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization .opt-circle-average .path {
   stroke: #1cbecb;
   stroke-linecap: round;
   transition: stroke-dashoffset 0.5s ease 0s;
 }
-.wrap.is-shortpixel-bulk-page section.panel.process .average-optimization .opt-circle-average .text,
-.wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization .opt-circle-average .text {
+.wrap.is-shortpixel-bulk-page section.panel.process .process_heading .average-optimization .opt-circle-average .text,
+.wrap.is-shortpixel-bulk-page section.panel.finished .process_heading .average-optimization .opt-circle-average .text {
   fill: #1FBEC9;
   font-size: 28px;
   font-weight: 700;
@@ -1159,6 +1189,8 @@
   display: table;
   width: 80%;
   margin: 30px auto;
+  border-radius: 16px;
+  background-color: #F4FBFC;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary > div,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary > div {
@@ -1172,19 +1204,24 @@
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .heading,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .heading {
-  background: #F6F9FF;
+  background-color: #D9F9FF;
+  color: #000;
   border: 1px solid #EBF5FF;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .heading .special-op,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .heading .special-op {
   color: #EC2C25;
 }
+.wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .heading .dashicons,
+.wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .heading .dashicons {
+  color: #1ABDCA;
+}
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .line-progressbar,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .line-progressbar {
-  width: 100px;
+  width: 200px;
   height: 20px;
   position: relative;
-  background: #ccc;
+  background: #fff;
   display: inline-block;
   vertical-align: middle;
 }
@@ -1208,7 +1245,7 @@
   width: 10%;
   top: 0;
   bottom: 0;
-  background: #1FBEC9;
+  background: #116C7E;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .line-progressbar .finished-paragraph,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .line-progressbar .finished-paragraph {
