--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -404,6 +404,7 @@
 
   section.spio-progressbar {
     margin: 30px 0;
+    background-color: $blue_background;
 
     .flex {
       display: flex;
@@ -439,7 +440,7 @@
       }
 
       >div.select .line {
-        width: 50%;
+     //  width: 50%;
         left: 50%;
       }
 
@@ -792,9 +793,10 @@
     }
 
     .totals {
-      text-align: center;
-      font-size: 25px;
-      padding: 35px 0;
+      //text-align: center;
+      font-size: 14px;
+      color: $blue_dark; 
+     // padding: 35px 0;
       margin-top: 20px;
      // background: #F6F9FF;
 
@@ -803,12 +805,19 @@
       }
     }
 
+    .credits-wrapper
+    {
+       display: flex;
+       align-items: center; 
+
+    }
+
     .credits {
       display: table;
       //margin: 35px 0 35px 25px;
      // width: 80%;
       //margin-left: 10%;
-      margin: 35px 100px;
+      margin: 35px 60px;
 
       >p {
         display: table-row
@@ -846,7 +855,33 @@
         //font-weight: 700;
       }
 
+      .totals span
+      {
+         color: #000; 
+         font-size: 16px; 
+         font-weight: 500;
+      }
+
+    } // credits
+
+    .credits.ai 
+    {
+       border-left: 1px solid $blue_default;
     }
+
+    .button.unlimited 
+    {
+       color: $blue_dark; 
+       background: $blue_background;
+       border: 1px solid $blue_default;
+       border-radius: 0;
+
+       .icon {
+          width: 30px;
+          margin-right: 8px;
+       }  
+    }
+     
 
     .over-quota,
     .no-images
@@ -910,64 +945,78 @@ section.panel.finished {
 
   }
 
-  .average-optimization {
-    position: absolute;
-    top: 0px;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    z-index: 2;
-    background: rgba(255, 255, 255, 0.4);
+  .process_heading 
+  {
+     width: 80%; 
+     margin: 15px auto;
 
-    // margin-top: -10px;
-    p {
-      margin: 0;
-      font-size: 13px;
+     h3 {
+      border: 0;
+     }
+
+     .average-optimization {
       position: absolute;
-      //	width: 100%;
-
-      bottom: 45px;
-      left: -15px;
-      padding: 6px 10px;
-      color: #fff;
-      background: rgba($color-darkest, 0.5);
-      font-weight: 700;
-      border-radius: 3px;
-      white-space: nowrap;
-
-    }
-
-    .opt-circle-average {
-      width: 150px;
-      height: 150px;
-      float: right;
-
-      // margin-right: 35px;
-      .trail {
-        stroke: #ddd;
-      }
-
-      .path {
-        stroke: $color-dark;
-        stroke-linecap: round;
-        transition: stroke-dashoffset 0.5s ease 0s;
-      }
-
-      .text {
-
-        fill: #1FBEC9;
-        font-size: 28px;
+      top: 0px;
+      right: 0;
+      display: flex;
+      justify-content: center;
+      z-index: 2;
+      background: rgba(255, 255, 255, 0.4);
+  
+      // margin-top: -10px;
+      p {
+        margin: 0;
+        font-size: 13px;
+        position: absolute;
+        //	width: 100%;
+  
+        bottom: 45px;
+        left: -15px;
+        padding: 6px 10px;
+        color: #fff;
+        background: rgba($color-darkest, 0.5);
         font-weight: 700;
-        dominant-baseline: middle;
-        text-anchor: middle;
+        border-radius: 3px;
+        white-space: nowrap;
+  
+      }
+  
+      .opt-circle-average {
+        width: 100px;
+        height: 100px;
+        float: right;
+  
+        // margin-right: 35px;
+        .trail {
+          stroke: #ddd;
+        }
+  
+        .path {
+          stroke: $color-dark;
+          stroke-linecap: round;
+          transition: stroke-dashoffset 0.5s ease 0s;
+        }
+  
+        .text {
+  
+          fill: #1FBEC9;
+          font-size: 28px;
+          font-weight: 700;
+          dominant-baseline: middle;
+          text-anchor: middle;
+        }
       }
     }
   }
+
+  
 
   .bulk-summary {
     display: table;
     width: 80%;
     margin: 30px auto;
+    border-radius: 16px;
+    background-color: $blue_background;
 
     >div {
       display: table-row;
@@ -980,22 +1029,25 @@ section.panel.finished {
     }
 
     .heading {
-      background: #F6F9FF;
+      background-color: $blue_extralight;
+      color: #000;
       border: 1px solid #EBF5FF;
 
       .special-op {
         color: #EC2C25;
       }
+      .dashicons {
+         color: $blue_default;
+      }
     }
 
     .line-progressbar {
-      width: 100px;
+      width: 200px;
       height: 20px;
       position: relative;
-      background: #ccc;
+      background: #fff;
       display: inline-block;
       vertical-align: middle;
-
 
       .done-text {
         position: absolute;
@@ -1017,7 +1069,7 @@ section.panel.finished {
         width: 10%;
         top: 0;
         bottom: 0;
-        background: #1FBEC9;
+        background: $blue_dark;
 
       }
 
