--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -62,7 +62,7 @@
   box-shadow: none;
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a:hover, .wrap.is-shortpixel-bulk-page header .top-buttons button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a i.switch, .wrap.is-shortpixel-bulk-page header .top-buttons button i.switch {
   width: 18px;
@@ -276,7 +276,7 @@
   width: 30px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:hover {
-  background: #1793ab;
+  background: rgb(23.0629370629, 146.5174825175, 170.9370629371);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:disabled {
@@ -310,7 +310,7 @@
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .log-wrapper label {
   display: inline-block;
   text-align: center;
-  border-bottom: 1px solid #1ABDCA;
+  border-bottom: 1px solid #92D5E3;
   width: 200px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .log-wrapper label h3 {
@@ -321,6 +321,7 @@
   color: #fff;
   padding: 6px;
   background: #1ABDCA;
+  border-radius: 3px 3px 0 0;
   font-size: 12px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .log-wrapper label h3 .icon {
@@ -330,7 +331,8 @@
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .dashboard-log {
   display: table;
   width: 80%;
-  margin: 0 auto;
+  border-top: 1px solid #92D5E3;
+  margin: -1px auto 0 auto;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .dashboard-log h3 {
   display: table-caption;
@@ -344,8 +346,7 @@
   padding: 8px 8px 8px 0;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .dashboard-log .head {
-  background: #92D5E3;
-  border-top: 1px solid #116C7E;
+  background: #D9F9FF;
   text-align: left;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .dashboard-log .head span {
@@ -389,7 +390,6 @@
   padding: 0;
   left: 0;
   right: 0;
-  top: -100px;
   width: auto;
   box-sizing: border-box;
   box-shadow: rgba(0, 0, 0, 0.5) 4px 4px 20px;
@@ -482,17 +482,14 @@
   letter-spacing: 0.3px;
   font-weight: 700;
   font-size: 14px;
-  border-radius: 6px;
-  border: none;
+  border-radius: 3px;
+  border: 1px solid #1ABDCA;
   transition: all 0.1s ease-in-out;
   line-height: 1;
 }
 .wrap.is-shortpixel-bulk-page .button:hover {
-  background: #1cbecb;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
   color: #fff;
-}
-.wrap.is-shortpixel-bulk-page .button:focus {
-  background: #1cbecb;
 }
 .wrap.is-shortpixel-bulk-page .button .dashicons {
   font-size: 26px;
@@ -514,12 +511,12 @@
 .wrap.is-shortpixel-bulk-page .button-primary {
   background: #1ABDCA;
   color: #fff;
-  border-radius: 6px;
+  border-radius: 3px;
   border: none;
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page .button-primary:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page nav {
   margin: 45px 0;
@@ -707,7 +704,7 @@
   transition: all 900ms;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused:hover {
-  background: #1ca9b3;
+  background: rgb(27.5926724138, 169.1163793103, 178.9073275862);
 }
 .wrap.is-shortpixel-bulk-page .processor-paused .dashicons {
   margin-right: 6px;
@@ -763,6 +760,15 @@
   background-color: #1ABDCA;
   color: #fff;
   border-color: #F4FBFC;
+}
+.wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.active .outer {
+  background-color: #1ABDCA;
+  color: #fff;
+  bordeir-color: #F4FBFC;
+  height: 47px;
+  width: 47px;
+  margin-top: -46px;
+  border-radius: 50%;
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.active .text {
   color: #1ABDCA;
@@ -1001,14 +1007,19 @@
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper {
   background-color: #F4FBFC;
   flex: 1;
-  border-radius: 16px;
+  border-radius: 15px;
   margin: 0 5%;
   max-width: 45%;
+  padding-top: 10px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper h4 {
   font-size: 14px;
   font-weight: 700;
-  padding-left: 20px;
+  padding-left: 30px;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper h4.totals {
+  padding-left: 15px;
+  color: #3c434a;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper h4 .dashicons {
   color: #1FBEC9;
@@ -1016,24 +1027,33 @@
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table {
   display: table;
-  width: 90%;
-  margin: 0 4px;
+  width: 95%;
+  margin: 0 10px;
+  padding-bottom: 10px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div {
   display: table-row;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div.images {
   color: #116C7E;
+  padding-left: 10px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div.filetypes {
   color: #aaa;
   font-size: 12px;
+  padding-left: 10px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div > span {
   display: table-cell;
   border-bottom: 1px solid #ccc;
   width: 50%;
-  padding: 15px 0 15px 15px;
+  padding: 15px;
+}
+.wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div > span.totals {
+  border-bottom: none;
+  font-size: 14px;
+  font-weight: 700;
+  color: #3c434a;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .summary-list .section-wrapper .list-table > div > span:nth-child(2) {
   text-align: right;
@@ -1433,7 +1453,7 @@
   transition: all 0.5s ease;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish:hover {
-  background: #24d1dd;
+  background: rgb(36.2392241379, 209.2887931034, 221.2607758621);
 }
 .wrap.is-shortpixel-bulk-page .part-debug {
   background: #000;
